--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   get_storage: ^2.1.1
   google_fonts: ^6.2.1
   shimmer: ^3.0.0
+  form_field_validator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
