--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_fonts: ^6.2.1
   shimmer: ^3.0.0
   form_field_validator: ^1.1.0
+  paginate_firestore_plus: ^1.0.2+3
 
 dev_dependencies:
   flutter_test:
